# RubberDuckFactory

./: .clinerules  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  cost_tracker.py  docker-compose.yaml  main.py  metadata.json  package.json  pyproject.toml  quality_gate_server.py  server.py  sovereign_proxy.py
.claude/: settings.json
.claude/hooks/: .last_stop_ts  post_agent_evolution_flag.py  post_audit_log.py  pre_agent_schema_guard.py  pre_bash_guard.py  pre_code_freeze.py  pre_governance_guard.py  session_squad_status.py  stop_session_digest.py
.claude/skills/agent-briefing/: SKILL.md
.claude/skills/deploy-committee/: SKILL.md
.claude/skills/governance-check/: SKILL.md
.claude/skills/ledger-log/: SKILL.md
.governance/: hr_policies.md  model_caution_list.md
agents/: agent_runner.py  pleno_rag_worker.py
agents/active/: atlas.json  chen.json  falcon.json  lens.json  nova.json  phoenix.json  quill.json  shadow.json
agents/blacklist/: echo.json
architecture-map/: Dockerfile  README.md  metadata.json  nginx.conf
architecture-map/src/: App.tsx  data.ts  index.css  types.ts
architecture-map/src/components/: ActiveSimulationConsole.tsx  DiagramBoard.tsx  (+1 more)
board/: package-lock.json  package.json
docs/: ADR-003-selecao-artificial-configuracoes-agente.md
memory/: memory_test.py  squad_knowledge_jina.py  vector_store.py
memory/chroma_db/: chroma.sqlite3
orchestrator/: Dockerfile  main.ts  package.json
project_ledger/: history.json  history_log.json
squad-mcp-project/: .env  .gitgnore  CLAUDE.md  check_squad.py
(+12 files in other folders)
