[project]
name = "rubberduckfactory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "chromadb>=1.5.9",
  "sentence-transformers>=5.4.1",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "qdrant-client>=1.18.0",
  "mcp>=1.27.1",
]
